--- a/healthcare.html
+++ b/healthcare.html
@@ -21,22 +21,17 @@
                 <div class="main_container">
                     <table class="table" style="width: 500px;">
                         <tr>
-                            <td><b>Fever Clinics</b></td>
-                            <td><a href="fc.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><b>DCH</b></td>
+                            <td><a href="dch.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
                         <tr>
-                            <td><b>Quarantine Centers</b></td>
-                            <td><a href="qc.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><b>DCHC</b></td>
+                            <td><a href="dchc.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
                         <tr>
-                            <td><b>Isolation Centers</b></td>
-                            <td><a href="ic.html"><button class="btn btn-primary">GO</button></a></td>
+                            <td><b>DCCC</b></td>
+                            <td><a href="dccc.html"><button class="btn btn-primary">GO</button></a></td>
                         </tr>
-                        <tr>
-                            <td><b>Designated Hospitals</b></td>
-                            <td><a href="dc.html"><button class="btn btn-primary">GO</button></a></td>
-                        </tr>
-
                     </table>
 
                 </div>
