--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <img class="icons" src="img/money.png" alt="epass"> <br>
                     <p>Donate Funds</p>
                     <div class="goicon"> <a class="fa fa-chevron-circle-right fa-3x" id="go16"
-                            href="http://cmrelief.rajasthan.gov.in/Covid-19.aspx"></a></i>
+                            href="http://cmrelief.rajasthan.gov.in/Covid-19.aspx" target="_blank"></a></i>
                     </div>
                 </div>
             </div>
