--- a/tweets.html
+++ b/tweets.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="tweets mx-auto">
-                        <a class="twitter-timeline" href="https://twitter.com/RajGovOfficial?ref_src=twsrc%5Etfw\">
+                        <a class="twitter-timeline" href="https://twitter.com/RajGovOfficial?ref_src=twsrc%5Etfw\"
                             data-height="500px" data-width="500px">Tweets by RajGovOfficial</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
