--- a/dccc.html
+++ b/dccc.html
@@ -70,7 +70,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
-    <script src="js/dchc.js"></script>
+    <script src="js/dccc.js"></script>
 </body>
 
 </html>
