--- a/dch.html
+++ b/dch.html
@@ -67,6 +67,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
-    <script src="js/dch.js"></script>
+    <script src="js/dc.js"></script>
 </body>
 </html>
