--- a/dchc.html
+++ b/dchc.html
@@ -67,6 +67,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
-    <script src="js/dccc.js"></script>
+    <script src="js/fc.js"></script>
 </body>
 </html>
